unpackaged/main/default/objects/zkmulti__MCPackage__c/zkmulti__MCPackage__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <displayFormat>Package-{0000000000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>