unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__ActualDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ActualDeliveryDate__c</fullName>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>