unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__AdditionalHandling__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AdditionalHandling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Handling</label>
    <type>Checkbox</type>
</CustomField>