unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__AllPackedHaZmatInOnePackage__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AllPackedHaZmatInOnePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if multiple, different hazmat/chemicals are contained within one box in a package</description>
    <inlineHelpText>if multiple, different hazmat/chemicals are contained within one box in a package</inlineHelpText>
    <label>All Packed HazMat In One Package</label>
    <type>Checkbox</type>
</CustomField>