unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__Damaged__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Damaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damaged</label>
    <type>Checkbox</type>
</CustomField>