unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__DeletedFromShipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeletedFromShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted from Shipment</label>
    <type>Checkbox</type>
</CustomField>