unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__DeliverWithoutSignature__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliverWithoutSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver Without Signature</label>
    <type>Checkbox</type>
</CustomField>