unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__DryIce__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DryIce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Ice</label>
    <type>Checkbox</type>
</CustomField>