unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__DryIceMedicalUseIndicator__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DryIceMedicalUseIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Ice Medical Use Indicator</label>
    <type>Checkbox</type>
</CustomField>