unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__ExtraCost__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ExtraCost__c</fullName>
    <label>Extra Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>