unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__HazMatDetailsFirst__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazMatDetailsFirst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haz Mat Details First</label>
    <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
    <relationshipLabel>Packages (Haz Mat Details First)</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>