unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__HazMatDetailsSecond__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazMatDetailsSecond__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haz Mat Details Second</label>
    <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
    <relationshipLabel>Packages (Haz Mat Details Second)</relationshipLabel>
    <relationshipName>Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>