unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__HazMatDetailsThird__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazMatDetailsThird__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haz Mat Details Third</label>
    <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
    <relationshipLabel>Packages (Haz Mat Details Third)</relationshipLabel>
    <relationshipName>Packages2</relationshipName>
    <type>Lookup</type>
</CustomField>