unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__HazMatFirstQuantity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazMatFirstQuantity__c</fullName>
    <label>Haz Mat First Quantity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>