unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__HazMatThirdQuantity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HazMatThirdQuantity__c</fullName>
    <label>Haz Mat Third Quantity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>