unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__IonInEquip__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IonInEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ion in Equip</label>
    <type>Checkbox</type>
</CustomField>