unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__IonWithEquip__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IonWithEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ion w/ Equip</label>
    <type>Checkbox</type>
</CustomField>