unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__IsFreight__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IsFreight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Freight</label>
    <type>Checkbox</type>
</CustomField>