unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__MetalInEquip__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__MetalInEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metal in Equip</label>
    <type>Checkbox</type>
</CustomField>