unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__MetalWithEquip__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__MetalWithEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metal w/ Equip</label>
    <type>Checkbox</type>
</CustomField>