unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__OverPackedHazMat__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OverPackedHazMat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One or more hazmat/chemicals are in separate boxes in a package</description>
    <inlineHelpText>One or more hazmat/chemicals are in separate boxes in a package</inlineHelpText>
    <label>Over Packed HazMat</label>
    <type>Checkbox</type>
</CustomField>