unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__PackageProfile__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PackageProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Profile</label>
    <type>Checkbox</type>
</CustomField>