unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__Pickup_Tag__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Pickup_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup Tag</label>
    <type>Checkbox</type>
</CustomField>