unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__Profile__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>zkmulti__MCPackage__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>