unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SignatureConfirmation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SignatureConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Confirmation</label>
    <type>Checkbox</type>
</CustomField>