unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsCod__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsCod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD</label>
    <type>Checkbox</type>
</CustomField>