unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsCodCashiersCheckOrMoneyOrderOnly__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsCodCashiersCheckOrMoneyOrderOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD Cashier&#39;s Check or Money Order Only</label>
    <type>Checkbox</type>
</CustomField>