unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsElectronicCod__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsElectronicCod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C.O.D.</label>
    <type>Checkbox</type>
</CustomField>