unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsHazMatDetails__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsHazMatDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HazMat Details</label>
    <referenceTo>zkmulti__HazMatDetails__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Multi_Carrier_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>