unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsNonStandardPackaging__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsNonStandardPackaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Standard Packaging</label>
    <type>Checkbox</type>
</CustomField>