unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsOrmDDetails__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsOrmDDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ORM-D Details</label>
    <referenceTo>zkmulti__DangerousGoodsDetails__c</referenceTo>
    <relationshipName>Multi_Carrier_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>