unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsPriorityAlert__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsPriorityAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert</label>
    <type>Checkbox</type>
</CustomField>