unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__SsPriorityAlertPlus__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SsPriorityAlertPlus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert Plus</label>
    <type>Checkbox</type>
</CustomField>