unpackaged/main/default/objects/zkmulti__MCPackage__c/fields/zkmulti__VerbalConfirmation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__VerbalConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbal Confirmation</label>
    <type>Checkbox</type>
</CustomField>