unpackaged/main/default/objects/zkmulti__MCPackage__c/listViews/zkmulti__Package_Data.listView-meta.xml
<ListView>
    <fullName>zkmulti__Package_Data</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__PackageProfileDescription__c</columns>
    <columns>zkmulti__Packaging_Type__c</columns>
    <columns>zkmulti__AdmissibilityPackageTypeName__c</columns>
    <columns>zkmulti__AdmissibilityPackageType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkmulti__PackageProfile__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Package Data</label>
</ListView>